--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "jeep-photoviewer",
-  "version": "1.1.8",
+  "version": "1.2.0",
   "description": "PhotoViewer Stencil Component",
   "main": "dist/index.cjs.js",
-  "module": "dist/custom-elements/index.js",
+  "module": "dist/index.js",
   "es2015": "dist/esm/index.mjs",
   "es2017": "dist/esm/index.mjs",
-  "types": "dist/custom-elements/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "collection": "dist/collection/collection-manifest.json",
   "collection:main": "dist/collection/index.js",
   "unpkg": "dist/jeep-photoviewer/jeep-photoviewer.esm.js",
@@ -18,27 +18,19 @@
     "build": "stencil build --docs",
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
-    "test-spec": "stencil test --spec",
-    "test-e2e": "stencil test --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@stencil/core": "^2.19.3"
+    "@stencil/core": "^4.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.21",
-    "@types/puppeteer": "^5.4.3",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
-    "puppeteer": "^5.5.0"
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.11",
+    "jest": "^27.5.1",
+    "jest-cli": "^27.5.1",
+    "puppeteer": "21.1.1"
   },
-  "keywords": [
-    "PhotoViewer",
-    "Images Gallery",
-    "stencil",
-    "web component"
-  ],
   "author": "Jean Pierre Quéau",
   "license": "MIT",
   "repository": {
